# obj2las

./: .gitignore  CMakeLists.txt  build.sh  readme.md  setup.py  tests.ipynb
include/: exceptions.h  las.h  shiftcoords.h  texture.h  vertexcolors.h
src/: las.cpp  obj2las-backup.cpp  obj2las-new.cpp  obj2las.cpp  shiftcoords.cpp  texture.cpp  vertexcolors.cpp
